--- a/carousel.css
+++ b/carousel.css
@@ -4,17 +4,19 @@
 
 body {
   /* padding-top: 10rem; */
-  background: url(imagins/fon.jpg);
+  background-image: url(imagins/fon.jpg);
+  background-attachment:fixed;
   padding-bottom: 3rem;
   color: #5a5a5a;
   width: 100%;
   height: 100%;
+  /* background-position: fixed; */
 }
 
 h1 {
   color: black;
   font-size: 330%;
-  background: lime;
+  /* background: deeppink; */
 }
 
 .x p {
@@ -23,6 +25,10 @@ h1 {
 
 .text-carousel {
   background: lime;
+}
+
+.btn-outline-success {
+  margin-right: 10px;
 }
 
 /* CUSTOMIZE THE CAROUSEL
@@ -82,6 +88,68 @@ h1 {
   font-family: 'Courier New', Courier, monospace;
 
 }
+
+/* -------------------------------------------------*/ 
+
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 56px;
+  height: 28px;
+}
+
+.switch input {display:none;}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(184, 184, 184);
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  /* -webkit-transition: .4s; */
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #164870;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #164870;
+}
+
+input:checked + .slider:before {
+  /* -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px); */
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 20px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+
+
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
